--- a/custom_components/tado_local/manifest.json
+++ b/custom_components/tado_local/manifest.json
@@ -9,5 +9,5 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/NickySchrader/tado_local_hacs/issues",
   "requirements": ["aiohomekit>=3.0.0", "aiohttp>=3.9.0"],
-  "version": "1.0.0a1"
+  "version": "0.0.1"
 }
